use bootstrap template for temporary page style

--- a/app/views/public/home.html.erb
+++ b/app/views/public/home.html.erb
@@ -1,2 +1,8 @@
-<h1>Find Your Ideal Vacation Spot</h1>
+<div class="container d-flex h-100 p-3 mx-auto flex-column">
+      <main role="main" class="inner cover">
+        <h1 class="heading">Home Page</h1>
+        </p>
+      </main>
 
+   
+    </div>
