--- a/app/views/layouts/nav/_public.html.erb
+++ b/app/views/layouts/nav/_public.html.erb
@@ -6,10 +6,10 @@
   <div class="collapse navbar-collapse" id="navbarsExampleDefault">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Log In</a>
+        <%= link_to "Log In", new_user_session_path,  class: "nav-link" %>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Create Account</a>
+         <%= link_to "Create Account", new_user_registration_path,  class: "nav-link" %>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Notices</a>
