--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,3 +11,7 @@
  * It is generally better to create a new file per style scope.
  */
  
+ .navbar {
+     background-color: #1e7e34;
+     font-family: Verdana;
+ }
