--- a/app/views/layouts/nav/_public.html.erb
+++ b/app/views/layouts/nav/_public.html.erb
@@ -1,11 +1,14 @@
-<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-#1e7e34">
+<nav class="navbar navbar-expand-md navbar-dark fixed-top">
   <a class="navbar-brand" href="#">Vacation Listings</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarsExampleDefault">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
+     <li class="nav-item active">
+        <a class="nav-link" href="/">Notices</a>
+      </li>
+      <li class="nav-item">
         <%= link_to "Log In", new_user_session_path,  class: "nav-link" %>
       </li>
       <li class="nav-item">
