--- a/app/views/layouts/nav/_public.html.erb
+++ b/app/views/layouts/nav/_public.html.erb
@@ -6,7 +6,7 @@
   <div class="collapse navbar-collapse" id="navbarsExampleDefault">
     <ul class="navbar-nav mr-auto">
      <li class="nav-item active">
-        <a class="nav-link" href="/">Notices</a>
+        <a class="nav-link" href="/">Main</a>
       </li>
       <li class="nav-item">
         <%= link_to "Log In", new_user_session_path,  class: "nav-link" %>
