--- a/app/views/layouts/nav/_public.html.erb
+++ b/app/views/layouts/nav/_public.html.erb
@@ -9,11 +9,17 @@
         <a class="nav-link" href="/">Main</a>
       </li>
       <li class="nav-item">
+      <%if user_signed_in?%>
+      <li class="nav-item">
+      <%= link_to "Log Out", destroy_user_session_path, method: :delete, class: "nav-link"%>
+      </li>
+      <%else%>
         <%= link_to "Log In", new_user_session_path,  class: "nav-link" %>
       </li>
       <li class="nav-item">
          <%= link_to "Create Account", new_user_registration_path,  class: "nav-link" %>
       </li>
+      <%end%>
       <li class="nav-item">
         <a class="nav-link" href="#">Notices</a>
       </li>
