--- a/app/views/layouts/nav/_public.html.erb
+++ b/app/views/layouts/nav/_public.html.erb
@@ -6,6 +6,11 @@
   <div class="collapse navbar-collapse" id="navbarsExampleDefault">
     <ul class="navbar-nav mr-auto">
      <li class="nav-item active">
+     <%if user_signed_in?%>
+      <%=link_to "Dashboard", dashboard_index_path, class: "nav-link"%>
+     <%else%>
+
+     <%end%>
         <a class="nav-link" href="/">Main</a>
       </li>
       <li class="nav-item">
@@ -24,7 +29,7 @@
         <a class="nav-link" href="#">Notices</a>
       </li>
       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Properties</a>
+        <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Resources</a>
         <div class="dropdown-menu" aria-labelledby="dropdown01">
           <a class="dropdown-item" href="#">Action</a>
           <a class="dropdown-item" href="#">Another action</a>
